# settings

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  ExampleClass.xml  README.md  buildAndRunTests.sh  example.cpp  findTinyXml.cmake
include/: settings.hpp
src/executables/: CMakeLists.txt
src/executables/src/: example.cpp  fuzzer_settings.cpp
src/settings/: CMakeLists.txt
src/settings/include/settings/: sanitizers.hpp  settings.hpp
src/tests/: CMakeLists.txt
src/tests/src/: test_settings.cpp
src/tests/src/settings/: test_settings.cpp
tests/: CMakeLists.txt  test_settings.cpp
